--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 .google-signin-container {
     text-align: center;
 }
-
+.g-signin2
 .google-signin-btn {
     background-color: #ff0000;
     color: #444444;
