--- a/react-student-app/src/Login/Login.css
+++ b/react-student-app/src/Login/Login.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
     font-family: Arial, sans-serif;
     background-color: #ecf1fa;
